syntax = "proto3";
option java_multiple_files = true;
option java_generic_services = true;
import "google/protobuf/empty.proto";
package com.trspo.grpc.transaction;

message TransactionMessage{
  string id =1;
  string data = 2;
}

message TransactionBatchResponse{
  repeated TransactionMessage transactions = 1;
}

message TransactionBatchRequest{
  repeated TransactionMessage transactions = 1;
}

message TransactionAmountRequest{
  int32 transactionAmount = 1;
}

service TransactionService{
  rpc getTransactions(TransactionAmountRequest) returns(TransactionBatchResponse);
  rpc markTransactionMined(TransactionBatchRequest) returns(google.protobuf.Empty);
}